# tsc-rs

./: .windsurfrules  Cargo.toml  Makefile.toml  NOTES.md  README.md
.cargo/: config.toml
tsc-rs/: Cargo.toml
tsc-rs/src/: lib.rs  main.rs  parser.rs  parser_test.rs  type_checker.rs  types.rs
